@@ -2,6 +2,11 @@
 {
 	margin-right: 8pt;
 }
+
+code
+{
+background-color:#FFFFCC;
+}
  
 h1,h2,h3,h4,h5,h6
 {
